--- a/client/e-commerce-project/package.json
+++ b/client/e-commerce-project/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.10",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
